@@ -9,6 +9,7 @@ import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.openjiuwen.core.common.exception.BaseError;
 import com.openjiuwen.core.common.exception.StatusCode;
+import com.openjiuwen.core.common.logging.Loggers;
 import com.openjiuwen.core.foundation.llm.model_clients.BaseModelClient;
 import com.openjiuwen.core.foundation.llm.schema.AssistantMessage;
 import com.openjiuwen.core.retrieval.common.RetrievalExceptions;
@@ -20,7 +21,6 @@ import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Future;
 import java.util.concurrent.Semaphore;
@@ -32,9 +32,10 @@ import java.util.concurrent.atomic.AtomicInteger;
 
 /**
  * LLM-backed triple extractor aligned with the Python implementation.
+ * 
+ * @since 0.1.7
  */
 public class LLMTripleExtractor extends Extractor {
-
     private static final ObjectMapper MAPPER = new ObjectMapper();
 
     private final BaseModelClient llmClient;
@@ -43,18 +44,29 @@ public class LLMTripleExtractor extends Extractor {
     private final int maxConcurrent;
 
     /**
-     * Auto-generated for codecheck compliance.
+     * LLMTripleExtractor.
+     * 
+     * @param llmClient llmClient
+     * @param modelName modelName
+     * @since 0.1.7
      */
     public LLMTripleExtractor(BaseModelClient llmClient, String modelName) {
         this(llmClient, modelName, 0.0f, 50);
     }
 
     /**
-     * Auto-generated for codecheck compliance.
+     * LLMTripleExtractor.
+     * 
+     * @param llmClient llmClient
+     * @param modelName modelName
+     * @param temperature temperature
+     * @param maxConcurrent maxConcurrent
+     * @since 0.1.7
      */
     public LLMTripleExtractor(BaseModelClient llmClient, String modelName, float temperature, int maxConcurrent) {
         if (llmClient == null) {
-            throw RetrievalExceptions.error(StatusCode.RETRIEVAL_RETRIEVER_LLM_CLIENT_NOT_FOUND, "llm_client is required");
+            throw RetrievalExceptions.error(StatusCode.RETRIEVAL_RETRIEVER_LLM_CLIENT_NOT_FOUND,
+                    "llm_client is required");
         }
         this.llmClient = llmClient;
         this.modelName = modelName;
@@ -62,36 +74,33 @@ public class LLMTripleExtractor extends Extractor {
         this.maxConcurrent = maxConcurrent <= 0 ? 1 : maxConcurrent;
     }
 
-    @Override
     /**
-     * Auto-generated for codecheck compliance.
+     * extract.
+     * 
+     * @param chunks chunks
+     * @param options options
+     * @return the result
+     * @since 0.1.7
      */
+    @Override
     public List<Triple> extract(List<TextChunk> chunks, Map<String, Object> options) {
         if (chunks == null || chunks.isEmpty()) {
             return List.of();
         }
         Semaphore limiter = new Semaphore(maxConcurrent);
-        ExecutorService executor = new ThreadPoolExecutor(
-                0,
-                maxConcurrent,
-                60L,
-                TimeUnit.SECONDS,
-                new SynchronousQueue<>(),
-                new ThreadFactory() {
+        ExecutorService executor = new ThreadPoolExecutor(0, maxConcurrent, 60L, TimeUnit.SECONDS,
+                new SynchronousQueue<>(), new ThreadFactory() {
                     private final AtomicInteger seq = new AtomicInteger(1);
                     @Override
-                    /**
-                     * Auto-generated for codecheck compliance.
-                     */
                     public Thread newThread(Runnable r) {
                         Thread t = new Thread(r);
                         t.setName("llm-triple-extract-" + seq.getAndIncrement());
                         t.setDaemon(false);
+                        t.setUncaughtExceptionHandler(
+                                (thread, e) -> Loggers.RETRIEVAL.error("Uncaught exception in " + thread.getName(), e));
                         return t;
                     }
-                },
-                new ThreadPoolExecutor.CallerRunsPolicy()
-        );
+                }, new ThreadPoolExecutor.CallerRunsPolicy());
 
         List<List<Triple>> results = new ArrayList<>(Collections.nCopies(chunks.size(), null));
         List<Exception> errors = new ArrayList<>(Collections.nCopies(chunks.size(), null));
@@ -115,8 +124,7 @@ public class LLMTripleExtractor extends Extractor {
                 task.get();
             }
         } catch (Exception ex) {
-            throw RetrievalExceptions.error(
-                    StatusCode.RETRIEVAL_KB_TRIPLE_EXTRACTION_PROCESS_ERROR,
+            throw RetrievalExceptions.error(StatusCode.RETRIEVAL_KB_TRIPLE_EXTRACTION_PROCESS_ERROR,
                     "triple extraction execution failed: " + ex.getMessage());
         } finally {
             executor.shutdown();
@@ -144,31 +152,28 @@ public class LLMTripleExtractor extends Extractor {
             if (firstError instanceof BaseError baseError) {
                 throw baseError;
             }
-            throw RetrievalExceptions.error(
-                    StatusCode.RETRIEVAL_KB_TRIPLE_EXTRACTION_PROCESS_ERROR,
+            throw RetrievalExceptions.error(StatusCode.RETRIEVAL_KB_TRIPLE_EXTRACTION_PROCESS_ERROR,
                     firstError.getMessage() != null ? firstError.getMessage() : firstError.toString());
         }
         return triples;
     }
 
+    /**
+     * extractChunk.
+     * 
+     * @param chunk chunk
+     * @return the result
+     * @throws Exception Exception
+     * @since 0.1.7
+     */
     private List<Triple> extractChunk(TextChunk chunk) throws Exception {
         String title = String.valueOf(chunk.getMetadata().getOrDefault("title", ""));
         String prompt = buildPrompt(chunk.getText(), title);
-        AssistantMessage response = llmClient.invoke(
-                List.of(Map.of("role", "user", "content", prompt)),
-                null,
-                temperature,
-                null,
-                modelName,
-                null,
-                null,
-                null,
-                null,
-                Collections.emptyMap());
+        AssistantMessage response = llmClient.invoke(List.of(Map.of("role", "user", "content", prompt)), null,
+                temperature, null, modelName, null, null, null, null, Collections.emptyMap());
         ParseResult parsed = parseTriples(response == null ? "" : response.getContentAsString(), chunk);
         if (!parsed.isSuccess()) {
-            throw RetrievalExceptions.error(
-                    StatusCode.RETRIEVAL_KB_TRIPLE_EXTRACTION_PROCESS_ERROR,
+            throw RetrievalExceptions.error(StatusCode.RETRIEVAL_KB_TRIPLE_EXTRACTION_PROCESS_ERROR,
                     chunk.getId() + ": LLM response could not be parsed as valid triple JSON");
         }
         return parsed.triples();
@@ -211,7 +216,9 @@ public class LLMTripleExtractor extends Extractor {
                 Magic Johnson
 
                 Passage:
-                After winning a national championship with Michigan State in 1979, Johnson was selected first overall in the 1979 NBA draft by the Lakers, leading the team to five NBA championships during their "Showtime" era.
+                After winning a national championship with Michigan State in 1979, Johnson was selected first overall \
+                in the 1979 NBA draft by the Lakers, leading the team to five NBA championships during their \
+                "Showtime" era.
 
                 # Demonstration 2
 
@@ -219,7 +226,8 @@ public class LLMTripleExtractor extends Extractor {
                 Elden Ring
 
                 Passage:
-                Elden Ring is a 2022 action role-playing game developed by FromSoftware. It was directed by Hidetaka Miyazaki with worldbuilding provided by American fantasy writer George R. R. Martin.
+                Elden Ring is a 2022 action role-playing game developed by FromSoftware. It was directed by Hidetaka \
+                Miyazaki with worldbuilding provided by American fantasy writer George R. R. Martin.
 
                 # Input
 
@@ -253,28 +261,34 @@ public class LLMTripleExtractor extends Extractor {
             Map<String, Object> metadata = new LinkedHashMap<>(chunk.getMetadata());
             metadata.put("doc_id", chunk.getDocId());
             metadata.put("chunk_id", chunk.getId());
-            triples.add(new Triple(
-                    node.get(0).asText().trim(),
-                    node.get(1).asText().trim(),
-                    node.get(2).asText().trim(),
-                    null,
-                    metadata));
+            triples.add(new Triple(node.get(0).asText().trim(), node.get(1).asText().trim(),
+                    node.get(2).asText().trim(), null, metadata));
         }
         return new ParseResult(triples, !triples.isEmpty());
     }
 
+    /**
+     * isInvalidTripleNode.
+     * 
+     * @param node node
+     * @return the result
+     * @since 0.1.7
+     */
     private static boolean isInvalidTripleNode(JsonNode node) {
         if (!node.isArray() || node.size() < 3) {
             return true;
         }
-        return node.get(0).isContainerNode()
-                || node.get(1).isContainerNode()
-                || node.get(2).isContainerNode()
-                || node.get(0).isNull()
-                || node.get(1).isNull()
-                || node.get(2).isNull();
+        return node.get(0).isContainerNode() || node.get(1).isContainerNode() || node.get(2).isContainerNode()
+                || node.get(0).isNull() || node.get(1).isNull() || node.get(2).isNull();
     }
 
+    /**
+     * extractJson.
+     * 
+     * @param content content
+     * @return the result
+     * @since 0.1.7
+     */
     private static String extractJson(String content) {
         if (content == null) {
             return "[]";
@@ -299,14 +313,18 @@ public class LLMTripleExtractor extends Extractor {
         return trimmed;
     }
 
+    /**
+     * repairJson.
+     * 
+     * @param json json
+     * @return the result
+     * @since 0.1.7
+     */
     private static String repairJson(String json) {
         return json == null ? "" : json.replaceAll(",\\s*([}\\]])", "$1");
     }
 
     record ParseResult(List<Triple> triples, boolean isSuccess) {
-        /**
-         * Auto-generated for codecheck compliance.
-         */
         public boolean isSuccess() {
             return isSuccess;
         }
